cleaned up things -- good state
