# packages/server/src/controllers/strategyController.ts
@@ -1,14 +1,19 @@
 import { Body, Controller, Get, Path, Post, Route } from "tsoa";
-import { FileStructure, StrategyFile, StrategyMetaData } from "@algotia/types";
+import {
+    FileStructure,
+    StrategyFile,
+    StrategyLanguages,
+    StrategyMetaData,
+} from "@algotia/types";
 import { strategyManager } from "../utils";
 
 @Route("strategy")
 export class StrategyController extends Controller {
     strategyManager = strategyManager;
 
-    @Get()
+    @Get("all")
     public getAllStrategies(): StrategyMetaData[] {
-        return this.strategyManager.getAllStrategies();
+        return this.strategyManager.getAllStrategies()
     }
 
     @Get("file/{fileName}")
@@ -19,6 +24,21 @@ export class StrategyController extends Controller {
     @Get("dir/{strategyDir}")
     public readStrategyDir(@Path() strategyDir: string): FileStructure {
         return this.strategyManager.readStrategyDir(strategyDir);
+    }
+
+    @Post("create")
+    public async createNewStrategy(
+        @Body()
+        body: {
+            name: string;
+            language: StrategyLanguages;
+        }
+    ): Promise<void> {
+        await this.strategyManager.createStrategy({
+            packageName: body.name,
+            language: body.language,
+        });
+        return;
     }
 
     @Post("file")
